--- a/myproject/templates/index.html
+++ b/myproject/templates/index.html
@@ -1,5 +1,9 @@
-<h1>Input your comment below:</h1>
-<form method="" action="counter">
+<!-- <h1>Input your comment below:</h1>
+<form method="POST" action="counter">
+    {%csrf_token%}
     <textarea name="text" rows="25" cols="100"></textarea><br>
     <input type="submit"/>
-</form>
+</form> -->
+<link rel="stylesheet" href="{%static 'style.css'%}">
+
+<h1>Hey ,Welcome to my new project.</h1>
