--- a/myproject/templates/login.html
+++ b/myproject/templates/login.html
@@ -1,10 +1,18 @@
 <h2>Login Now</h2>
 
+<style>
+    h3{
+        color:red
+    }
+</style>
+
 {% for message in messages %}
+{% endfor %}
 <form action="login" method="POST">
+    {% csrf_token %}
     <p>Username:</p>
     <input type="text" name="username"/>
     <p>Password:</p>
-    <input type="text" name="password"><br><br>
+    <input type="password" name="password"><br><br>
     <input type="Submit"/>
 </form>
